--- a/gb/18/10/8/n10770583.md
+++ b/gb/18/10/8/n10770583.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yvrwxa344/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yvrwxa344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yvrwxa344/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yvrwxa344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>上任100日 福特都做了什么？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/10/19874148-600x400.jpg" />
 <h6>2018年10月5日，福特在反对碳税集会上向支持者讲话。（加通社）
 </h6>
 <hr>
-<p>【大纪元2018年10月09日讯】（大纪元记者周行综合报导）<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81%E7%9C%81%E9%95%BF.md#1">安省省长</a><ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>上任已过百日，在其“做的承诺要兑现”原则下，省政府经历了一段最忙碌的日子。</p>
-<p>今年6月，<ahref="https://github.com/yvrwxa344/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>领导的保守党在省选中赢得多数党政府。上任后他迅速兑现竞选承诺，所带来的震动之大，现在仍能感到余震。</p>
+<p>【大纪元2018年10月09日讯】（大纪元记者周行综合报导）<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%AE%89%E7%9C%81%E7%9C%81%E9%95%BF.md#1">安省省长</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>上任已过百日，在其“做的承诺要兑现”原则下，省政府经历了一段最忙碌的日子。</p>
+<p>今年6月，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%A6%8F%E7%89%B9.md#1">福特</a>领导的保守党在省选中赢得多数党政府。上任后他迅速兑现竞选承诺，所带来的震动之大，现在仍能感到余震。</p>
 <h2>多伦多市议会规模减半</h2>
 <p>带来反弹最大的改变，莫过于裁减多伦多市议会。8月14日，省议会通过5号立法，将多伦多市选选区从47个减少到25个，此举引起政坛地震，并导致挑战省府决定的法律行动；9月10日，一名安省法官判5号立法“违宪”，“无效”。</p>
 <p>福特采用了双管齐下的应对办法，一边宣布上诉，一边召回在休假的议员，提出31号立法，援引“加拿大权利和自由宪章”中的“不理会条款（notwithstanding clause）”条款来捍卫裁减多伦多市议会的决定。 此举引起了全国性争论：何时合适使用该宪章条款？以及其长远影响等。</p>
@@ -45,47 +45,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/9/11/n10705166.md#1">法官判减市议员立法无效? 福特宣布用宪法捍卫省府决定</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/9/13/n10712912.md#1">改变引来反对 福特政府应对法律挑战</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/9/18/n10724061.md#1">使用“不理会条款” 福特获三位前省长支持</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/9/25/n10741265.md#1">福特财政审计报告：卖掉LCBO等企业为安省筹钱</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/9/26/n10743965.md#1">安省政府叫停 最低时薪调不会升至15元</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/8/n13629380.md#1">4月1日碳税涨25% 油价会更贵</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629237.md#1">防疫措施放松 越洋航空今夏重启直飞欧美航线</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/7/n13629176.md#1">加拿大临时战争庇护不接收非乌克兰公民</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/1/17/n13509923.md#1">加拿大各省最新疫情数据 （3月6日）</a></li>
-<li><a href="https://github.com/yvrwxa344/djy/blob/master/gb/22/3/6/n13626621.md#1">加拿大骑警在圣约翰港缴获价值1.98亿元可卡因</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/11/n10705166.md#1">法官判减市议员立法无效? 福特宣布用宪法捍卫省府决定</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/13/n10712912.md#1">改变引来反对 福特政府应对法律挑战</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/18/n10724061.md#1">使用“不理会条款” 福特获三位前省长支持</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/25/n10741265.md#1">福特财政审计报告：卖掉LCBO等企业为安省筹钱</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/9/26/n10743965.md#1">安省政府叫停 最低时薪调不会升至15元</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740277.md#1">多伦多150万元以上房子销量增</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740240.md#1">专家：加拿大房价下跌 才刚刚开始</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740212.md#1">丰田车开近百万公里 安省车主：全靠及时保养</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740208.md#1">加拿大禁普京及千名俄国高官和军官入境</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740123.md#1">如何区分流感、感冒、季节性过敏及COVID-19</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/20/n10863025.md#1" target="_blank">晓明：永难忘怀的血泪史</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/18/n11597772.md#1" target="_blank">法国解放报：法国应该承诺反对强摘器官</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/11/8/n4291474.md#1" target="_blank">明慧网编辑与一名大陆“610”人员的对话</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/21/n13594785.md#1">【未解之谜】拿地球人做实验？外星人意欲何为？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/25/n13605650.md#1">沈纯良娶盲妻 源于前世一笑一怒之报</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13607219.md#1">最是美丽的季节  错过了惊蛰将错过什么呢？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624465.md#1">【新闻看点】铁链女案仍发酵 人贩真名住址曝光</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626750.md#1">【神韵作品】2019 神韵交响乐《扇子舞》</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/7/n13627991.md#1">吴明德：俄罗斯只剩一条路 中共更孤立</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623663.md#1">FDA首次公开辉瑞疫苗数据 副作用1,291种</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624705.md#1">应对俄飞机坦克 美援乌武器清单曝光</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622771.md#1">伊能静庆53岁生日 与5岁女儿合照宛如姐妹</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622910.md#1">郑欣宜居家避疫仍化妆 靠生酮饮食减重20磅</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13623650.md#1">CUBE娱乐与徐穗珍解约 公布霸凌案调查结果</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626756.md#1">逾10位港星改名都各有原因 李佳芯为身体健康</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13626613.md#1">高圆圆自认表演天赋不够 曾抗拒别人谈她的容貌</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/26/n13606756.md#1">吃蔬菜能增肌！专家：比肉类对肌肉更好</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/4/n13622027.md#1">西兰花让动脉变柔软！六大蔬菜保护心脏</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624142.md#1">【健康1+1】比尔盖茨：下场流行将至 疫苗过时？</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/6/n13625094.md#1">当季水果鲜甜营养 吃对了就不容易生病</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/3/5/n13624381.md#1">茄子可防动脉硬化 烹煮3个技巧避免变色</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yvrwxa344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/8/n10770583.htm">上任100日 福特都做了什么？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/10/8/n10770583.htm">上任100日 福特都做了什么？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yvrwxa344/djy/blob/master/gb/18/10/8/n10770583.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yvrwxa344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yvrwxa344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yvrwxa344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/18/10/8/n10770583.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
